@@ -246,7 +246,7 @@ set(Boost_USE_MULTITHREADED ON)
 if (DEBUG)
 	set(Boost_DEBUG ON)
 endif ()
-set(Boost_DETAILED_FAILURE_MSG ON)
+#set(Boost_DETAILED_FAILURE_MSG ON)
 #set(Boost_ADDITIONAL_VERSIONS "1.40" "1.40.0" "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0" "1.44" "1.44.0" "1.45" "1.45.0" "1.46" "1.46.0")
 find_package(Boost 1.46 COMPONENTS system filesystem thread serialization program_options iostreams REQUIRED)
 
