@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2010 by Tamino Dauth                                    *
+ *   Copyright (C) 2011 by Tamino Dauth                                    *
  *   tamino@cdauth.eu                                                      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
@@ -18,18 +18,76 @@
  *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
  ***************************************************************************/
 
-#ifndef WC3LIB_MPQ_HPP
-#define WC3LIB_MPQ_HPP
+// TEST
+#include <iostream>
 
-#include "mpq/algorithm.hpp"
-#include "mpq/attributes.hpp"
-#include "mpq/block.hpp"
-#include "mpq/hash.hpp"
-#include "mpq/listfile.hpp"
-#include "mpq/mpq.hpp"
-#include "mpq/mpqfile.hpp"
-#include "mpq/platform.hpp"
-#include "mpq/sector.hpp"
-#include "mpq/signature.hpp"
+#include "listfile.hpp"
+#include "mpq.hpp"
 
+namespace wc3lib
+{
+
+namespace mpq
+{
+
+void Listfile::removeData()
+{
+	this->entries().clear();
+	MpqFile::removeData();
+}
+
+void Listfile::refresh()
+{
+	files().clear();
+
+	BOOST_FOREACH(const Mpq::FilePtr &mpqFile, this->mpq()->files().get<0>())
+	{
+		if (!mpqFile->path().empty() && mpqFile->path().string() != fileName()) /// @todo Exclude directories and file (signature)?
+			files().insert(mpqFile.get());
+	}
+}
+
+std::streamsize Listfile::readData()
+{
+	Entries entries = this->entries();
+
+	BOOST_FOREACH(Entries::const_reference path, entries)
+	{
+		MpqFile *file = this->mpq()->findFile(path);
+
+		if (file != 0)
+			this->files().insert(file);
+		// TEST
+		else
+			std::cerr << boost::format(_("Invalid entry in \"(listfile)\" file: %1%")) % boost::filesystem::path(path) << std::endl;
+	}
+
+	return 0;
+}
+
+std::streamsize Listfile::writeData()
+{
+	stringstream stream;
+
+	BOOST_FOREACH(MpqFile *file, this->files())
+	{
+#ifdef UNIX
+		std::string path(file->path().string());
+		toListfileEntry(path);
+#else
+		const std::string &path(file->path());
 #endif
+		stream << path << '\n';
+	}
+
+	return MpqFile::readData(stream);
+}
+
+Listfile::Listfile(Mpq* mpq, Hash* hash): MpqFile(mpq, hash)
+{
+	this->m_path = fileName();
+}
+
+}
+
+}
